--- a/apps/adt-payroll/templates/configmap.yaml
+++ b/apps/adt-payroll/templates/configmap.yaml
@@ -8,6 +8,12 @@ metadata:
 data:
     spring.zipkin.baseUrl: "http://zipkin:9411/"
     spring.jpa.hibernate.ddl-auto: none
+    -Dmy.property: "sit.hrms.alphadot.co.in"
+    -Dmy.port: "443"
+    -UI.property: "sit.hrms.alphadot.co.in"
+    -UI.port: "443"
+    -UI.scheme: "https"
+    -UI.context: "/apigateway"
     spring.datasource.hikari.connection-timeout: "20000"
     spring.datasource.hikari.minimum-idle: "2"
     spring.datasource.hikari.maximum-pool-size: "2"
