--- a/apps/adt-hrms/templates/configmap.yaml
+++ b/apps/adt-hrms/templates/configmap.yaml
@@ -16,5 +16,5 @@ data:
     spring.datasource.hikari.auto-commit: "true"
     spring.datasource.hikari.validation-query: "SELECT 1"
     spring.datasource.hikari.connectionTimeoutRetry: "3"
-    spring.profile.active: "sit"
+    drive.parent.folder: "sit"
 
