--- a/apps/adt-expensemanagement/templates/deployment.yaml
+++ b/apps/adt-expensemanagement/templates/deployment.yaml
@@ -19,11 +19,24 @@ spec:
           value: "{{ .Values.service.port }}"
         - name: "server.servlet.context-path"
           value: "/expensemanagement"
+        - name: spring.datasource.password
+          valueFrom:
+            secretKeyRef:
+              name: sithrmspostgresqlpwd
+              key: SIT-HRMS-POSTGRESQL-PWD
+        - name: spring.datasource.username
+          valueFrom:
+            secretKeyRef:
+              name: sithrmspostgresqlusername
+              key: SIT-HRMS-POSTGRESQL-USERNAME
+        - name: spring.datasource.url
+          valueFrom:
+            secretKeyRef:
+              name: sithrmsdatabaseurl
+              key: SIT-HRMS-DATABASE-URL
         envFrom:
          - configMapRef: 
-             name: {{ include "adt-expensemanagement.fullname" . }}-configmap   
-         - secretRef:
-             name: {{ include "adt-expensemanagement.fullname" . }}-secret             
+             name: {{ include "adt-expensemanagement.fullname" . }}-configmap             
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag}}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         name: {{ .Chart.Name }}
