--- a/apps/adt-gateway/templates/deployment.yaml
+++ b/apps/adt-gateway/templates/deployment.yaml
@@ -21,11 +21,24 @@ spec:
           value: "{{ .Values.service.port }}"
         - name: "server.servlet.context-path"
           value: "{{ .Values.contextPath }}"
+        - name: spring.datasource.password
+          valueFrom:
+            secretKeyRef:
+              name: sithrmspostgresqlpwd
+              key: SIT-HRMS-POSTGRESQL-PWD
+        - name: spring.datasource.username
+          valueFrom:
+            secretKeyRef:
+              name: sithrmspostgresqlusername
+              key: SIT-HRMS-POSTGRESQL-USERNAME
+        - name: spring.datasource.url
+          valueFrom:
+            secretKeyRef:
+              name: sithrmsdatabaseurl
+              key: SIT-HRMS-DATABASE-URL          
         envFrom:
          - configMapRef: 
-             name: {{ include "adt-gateway.fullname" . }}-configmap   
-         - secretRef:
-             name: {{ include "adt-gateway.fullname" . }}-secret            
+             name: {{ include "adt-gateway.fullname" . }}-configmap          
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag}}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         name: {{ .Chart.Name }}
