--- a/apps/adt-hrms/templates/configmap.yaml
+++ b/apps/adt-hrms/templates/configmap.yaml
@@ -10,11 +10,11 @@ data:
     spring.jpa.hibernate.ddl-auto: none
     spring.datasource.hikari.connection-timeout: "20000"
     spring.datasource.hikari.minimum-idle: "2"
-    spring.datasource.hikari.maximum-pool-size: "2"
     spring.datasource.hikari.idle-timeout: "300000"
     spring.datasource.hikari.max-lifetime: "1800000"
     spring.datasource.hikari.auto-commit: "true"
     spring.datasource.hikari.validation-query: "SELECT 1"
     spring.datasource.hikari.connectionTimeoutRetry: "3"
     drive.parent.folder: "sit"
+    spring.mail.cc: "alphatesthr@gmail.com"
 
