--- a/apps/adt-payroll/templates/configmap.yaml
+++ b/apps/adt-payroll/templates/configmap.yaml
@@ -16,12 +16,14 @@ data:
     -UI.context: "/apigateway"
     spring.datasource.hikari.connection-timeout: "20000"
     spring.datasource.hikari.minimum-idle: "2"
-    spring.datasource.hikari.maximum-pool-size: "2"
     spring.datasource.hikari.idle-timeout: "300000"
     spring.datasource.hikari.max-lifetime: "1800000"
     spring.datasource.hikari.auto-commit: "true"
     MAX_DISTANCE_THRESHOLD: "50"
-    spring.mail.host: "smtp-relay.brevo.com"
-    spring.mail.username: "ajaymishra.adt@gmail.com"
-    spring.mail.password: "Y8hzB7p05cDQWUwE"
+    spring.mail.host: "smtp.gmail.com"
+    spring.mail.username: "alphadottest@gmail.com"
+    spring.mail.password: "yabinxmdeuocynzx"
+    spring.mail.properties.mail.smtp.auth: "true"
+    spring.mail.cc: "nishasingh.adt@gmail.com"
+    spring.mail.properties.mail.smtp.starttls.enable: "true"
     api.form.html: "ACCEPT_LEAVE_REQUEST,REJECT_LEAVE_REQUEST,ACCEPT_PRIORTIME_REQUEST,REJECT_PRIORTIME_REQUEST"
