email property changes

--- a/apps/adt-auth/templates/configmap.yaml
+++ b/apps/adt-auth/templates/configmap.yaml
@@ -19,6 +19,7 @@ data:
     spring.datasource.hikari.idle-timeout: "300000"
     spring.datasource.hikari.max-lifetime: "1800000"
     spring.datasource.hikari.auto-commit: "true"
-    spring.mail.host: "smtp-relay.brevo.com"
-    spring.mail.username: "ajaymishra.adt@gmail.com"
-    spring.mail.password: "Y8hzB7p05cDQWUwE"
+    spring.mail.host: "smtp.gmail.com"
+    spring.mail.username: "alphadotsit.adt@gmail.com"
+    spring.mail.password: "tplyqqiwdwsvtdux"
+    spring.mail.properties.mail.smtp.auth: "true"
