--- a/apps/adt-payroll/templates/configmap.yaml
+++ b/apps/adt-payroll/templates/configmap.yaml
@@ -21,8 +21,8 @@ data:
     spring.datasource.hikari.auto-commit: "true"
     MAX_DISTANCE_THRESHOLD: "50"
     spring.mail.host: "smtp.gmail.com"
-    spring.mail.username: "alphadottest@gmail.com"
-    spring.mail.password: "yabinxmdeuocynzx"
+    spring.mail.username: "alphadotsit.adt@gmail.com"
+    spring.mail.password: "tplyqqiwdwsvtdux"
     spring.mail.properties.mail.smtp.auth: "true"
     spring.mail.cc: "alphadotsit.adt@gmail.com"
     spring.mail.properties.mail.smtp.starttls.enable: "true"
