otp property in auth and email property in expense

--- a/apps/adt-expensemanagement/templates/configmap.yaml
+++ b/apps/adt-expensemanagement/templates/configmap.yaml
@@ -17,3 +17,6 @@ data:
     spring.mail.username: "alphadotsit.adt@gmail.com"
     spring.mail.password: "tplyqqiwdwsvtdux"
     spring.mail.properties.mail.smtp.auth: "true"
+    email.service.url: "https://sit.hrms.alphadot.co.in/gateway"
+    -Dmy.property: "sit.hrms.alphadot.co.in"
+    -Dmy.port: "443"
