--- a/apps/adt-auth/templates/configmap.yaml
+++ b/apps/adt-auth/templates/configmap.yaml
@@ -23,3 +23,4 @@ data:
     spring.mail.username: "alphadotsit.adt@gmail.com"
     spring.mail.password: "tplyqqiwdwsvtdux"
     spring.mail.properties.mail.smtp.auth: "true"
+    otp.duration.time: "300000"
