property added in expense, payroll and utility

--- a/apps/adt-expensemanagement/templates/configmap.yaml
+++ b/apps/adt-expensemanagement/templates/configmap.yaml
@@ -17,6 +17,10 @@ data:
     spring.mail.username: "alphadotsit.adt@gmail.com"
     spring.mail.password: "tplyqqiwdwsvtdux"
     spring.mail.properties.mail.smtp.auth: "true"
-    email.service.url: "https://sit.hrms.alphadot.co.in/gateway"
+    email.service.url: "http://adt-gateway:9091/gateway/utility"
     -Dmy.property: "sit.hrms.alphadot.co.in"
     -Dmy.port: "443"
+    -UI.property: "sit.hrms.alphadot.co.in"
+    -UI.port: "443"
+    -UI.scheme: "https"
+    -UI.context: "/apigateway"
