--- a/apps/adt-payroll/templates/configmap.yaml
+++ b/apps/adt-payroll/templates/configmap.yaml
@@ -27,3 +27,5 @@ data:
     spring.mail.cc: "alphadotsit.adt@gmail.com"
     spring.mail.properties.mail.smtp.starttls.enable: "true"
     api.form.html: "ACCEPT_LEAVE_REQUEST,REJECT_LEAVE_REQUEST,ACCEPT_PRIORTIME_REQUEST,REJECT_PRIORTIME_REQUEST"
+    utility.service.url: "http://adt-gateway:9091/gateway/utility"
+    holiday: "2023-01-26,2023-03-08,2023-08-30,2023-08-15,2023-10-02,2023-10-24,2023-11-13,2024-08-15,2024-08-19"
